# kinect-time

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  convert-model.sh  get-gesture-net.sh  run-triton-server.sh  run-triton.sh
cmake/: RunConan.cmake
frame-stream/: CMakeLists.txt  main.cpp
frame_stream/: CMakeLists.txt  frame_stream.cpp  frame_stream.hpp  main.cpp
kinect/: CMakeLists.txt  conversion.cpp  conversion.hpp  gesturenet.cpp  gesturenet.hpp  kinect.cpp  kinect.hpp  python.cpp  test-driver.cpp  util.cpp  util.hpp
kinect-triton-client/: CMakeLists.txt  main.cpp  requirements.txt  triton-client.cpp  triton-client.hpp  triton-client.py
trtis_model_repo/hcgesture_tlt/: config.pbtxt
